implement comments and metriks
