# models/Post.ts
@@ -26,9 +26,14 @@ const Post = new Schema({
     type: String,
     default: PostStatus.ACTIVE,
   },
+  views: {
+    type: Schema.Types.Number,
+    default: 0,
+  },
   tags: [{ type: Schema.Types.ObjectId, ref: 'tags' }],
-  user: { type: Schema.Types.ObjectId, ref: 'users' },
+  user: { type: Schema.Types.ObjectId, ref: 'users', required: true },
   favoriteUsers: [{ type: Schema.Types.ObjectId, ref: 'users' }],
+  comments: [{ type: Schema.Types.ObjectId, ref: 'comments' }],
 }, { timestamps: true });
 
 export default model('posts', Post);
