# routers/PostsRouter.ts
@@ -29,5 +29,8 @@ router.get('/user/:userId', PostsController.getUserPosts);
 router.delete('/:id', authMiddleware, PostsController.deletePost);
 router.post('/favorite/:id', authMiddleware, PostsController.favoritePost);
 router.post('/unfavorite/:id', authMiddleware, PostsController.unFavoritePost);
+router.post('/comment', authMiddleware, PostsController.addCommentToPost);
+router.post('/comment/:id', authMiddleware, PostsController.editComment);
+router.delete('/comment/:id', authMiddleware, PostsController.removeComment);
 
 export default router;
